--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NidhiDashboard</string>
+
+    <string name="close_nav">Close</string>
+    <string name="open_nav">Open</string>
 </resources>
